[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autogen-jarvisclaw"
version = "0.1.0"
description = "AutoGen (AG2) model client for JarvisClaw AI API (x402 USDC payments supported)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "JarvisClaw", email = "support@jarvisclaw.ai" }]
keywords = ["autogen", "ag2", "jarvisclaw", "x402", "ai", "usdc", "agent"]
dependencies = [
    "ag2>=0.6.0",
    "httpx>=0.25.0",
    "openai>=1.50.0",
]

[project.urls]
Homepage = "https://jarvisclaw.ai"
Repository = "https://github.com/api-jarvisclaw/autogen-jarvisclaw"
